# api

./: .env  .gitignore  Cargo.toml  Procfile  README.md  RustConfig  configuration.yml  sqlx-data.json
.github/workflows/: general.yml
api/migrations/2022-02-08-022600_create_available_parts/: up.sql
api/src/: models.rs  schema.rs
configuration/: base.yaml  local.yml
migrations/: 20220219013332_create_users_table.sql  20220223015157_add_available_parts_table.sql  20220303005457_create_users_table.sql  20220306154758_add_pedals_table.sql  20220306155329_add_required_parts_table.sql  20220321233404_add_link_to_build_doc_for_pedal.sql  20220425002448_add_alternate_parts.sql
migrations/2022-02-08-022600_create_available_parts/: down.sql  up.sql
src/: api.rs  authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  models.rs  parts.rs  seed.rs  session_state.rs  startup.rs  telemetry.rs  types.rs  utils.rs  views.rs
src/api/: auth.rs  pedals.rs  routes.rs
src/api/messages/: handlers.rs
src/api/parts/: handlers.rs  routes.rs  types.rs
src/api/pedals/: handlers.rs  routes.rs  types.rs
src/domain/: subscriber_email.rs
src/extractors/: claims.rs
src/middlewares/: cors.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/login/: post.rs
src/routes/users/: change_password.rs  dashboard.rs  login.rs  mod.rs  utils.rs
tests/: available_pedals.rs  health_check.rs  helpers.rs
tests/api/: change_password.rs  helpers.rs  login.rs  main.rs
