[package]
name = "pedalpartscalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-rc.3"
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
anyhow = "1.0.40"
serde = "1.0.115"
config = { version = "0.11", default-features = false, features = ["yaml"] }
tokio = { version = "1", features = ["full"] }